--- a/11_12/public/index.html
+++ b/11_12/public/index.html
@@ -55,6 +55,7 @@
       <h1>메인페이지</h1>
       <h3>메인페이지에 어서오세요!</h3>
       <a href="/login.html">로그인</a>
+      <a href="/logout">로그아웃</a>
     </div>
   </div>
 </body>
